--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ build
 .DS_Store
 .env
 .env.local
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
@@ -31,6 +32,6 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw? 
+*.sw?
 
 current-site-pages
