--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,9 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
+env:
+  VITE_API_URL: https://g42ilwev92.execute-api.us-east-1.amazonaws.com/prod
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -35,8 +38,6 @@ jobs:
 
       - name: Build
         run: npm run build
-        env:
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
