--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.25.0",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
