--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.7",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.0.8",
+    "mathjs": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
