--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mathjs": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.15.0"
   },
