--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^11.0.8",
     "mathjs": "^14.0.1",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.22.3",
