--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.3",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
