--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "mathjs": "^14.0.1",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.3",
+    "react-use": "^17.6.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
