--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 # This will be overridden by the VITE_API_URL secret in GitHub Actions
 VITE_API_URL=${VITE_API_URL} 
+VITE_GOOGLE_MAPS_API_KEY=${VITE_GOOGLE_MAPS_API_KEY}
