--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@googlemaps/react-wrapper": "^1.2.0",
     "@tanstack/react-query": "^5.25.0",
     "axios": "^1.6.7",
     "dayjs": "^1.11.13",
@@ -36,6 +38,7 @@
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^22.10.5",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
